# WhisperJAV

./: .gitignore  .mailmap  404.html  AGGRESSIVE_BEFORE_AFTER_METRICS.md  AGGRESSIVE_CSS_CHANGES_SUMMARY.md  AUDIO_ANALYSIS_REPORT.md  CONTRIBUTING.md  Complete Documentation Version 1.01 WhisperJAV Project.docx  Complete Documentation Version 1.2 WhisperJAV Project.docx  Design Description hallucination.docx  IMPLEMENTATION_COMPLETE.md  INSTALLATION_GUIDE_v1.8.2rc1.md  LICENSE  MANIFEST.in  MIGRATION_PLAN_PYWEBVIEW_GUI_TAKEOVER.md  NOTICES  PHASE1_ARCHITECTURE.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE1_QUICK_START.md  PHASE1_TESTING.md  PHASE3_FRONTEND_GUIDE.md  PHASE5_SUMMARY.md  PIPELINE_RENAME_PLAN.md  README.md  README_UI_OPTIMIZATION.md  RELEASE_NOTES_v1.5.1.md  RELEASE_NOTES_v1.5.3.md  RELEASE_NOTES_v1.7.0-beta.md  RELEASE_NOTES_v1.7.1.md  RELEASE_NOTES_v1.7.2.md  RELEASE_NOTES_v1.7.3.md  RELEASE_NOTES_v1.7.4.md  RELEASE_NOTES_v1.7.5.md  RELEASE_NOTES_v1.8.0.md  RELEASE_NOTES_v1.8.1.md  RELEASE_NOTES_v1.8.2rc1.md  RELEASE_NOTES_v1.8.2rc2.md  RELEASE_NOTES_v1.8.3.md  RELEASE_NOTES_v1.8.4.md  RELEASE_NOTES_v1.8.5.md  (+35 more)
.docs_archive/: AGGRESSIVE_QUICK_REFERENCE.md  PHASE3_SUMMARY.md  PHASE3_VISUAL_COMPARISON.md  PHASE5_COMPLETION_REPORT.md  PHASE5_FINAL_TESTING.md  UI_OPTIMIZATION_REPORT.md  UI_OPTIMIZATION_SUMMARY.md  UI_OPTIMIZATION_VISUAL_COMPARISON.md
.github/: copilot-instructions.md
.plan/: ensemble_parameter_fixes.md
CHANGE_REVIEW_v1.8.7b2/: index.html
ISSUE_ANALYSIS_v1.8.7b1/: index.html
ISSUE_TRACKER_v1.8.x/: index.html
MANUAL_ROLLBACK/: index.html
UPGRADE/: index.html
UPGRADE_TROUBLESHOOTING/: index.html
VISUALIZATION_USAGE/: index.html
_cohere_spike/: FINDINGS.md  step1_verify_model_loadable.py
architecture/: Context-history-to_IMPL001.txt  reviewer_input_to_IMPL001.txt
crash_traces/: crash_trace_20251219_211642.jsonl  crash_trace_20251219_213710.jsonl  crash_trace_20251219_215057.jsonl  crash_trace_20251219_222328.jsonl
developer/: index.html
docs/: CHANGE_REVIEW_v1.8.7b2.md  CONFIG_ARCHITECTURE.md  ENSEMBLE_PIPELINE_REQUIREMENTS.md  ENSEMBLE_TAB_SPECIFICATION.md  ENSEMBLE_TWOPASS_REQUIREMENTS.md  ISSUE_ANALYSIS_v1.8.7b1.md  ISSUE_TRACKER_v1.8.x.md  MANUAL_ROLLBACK.md  UPGRADE.md  UPGRADE_GUIDE_v1.8.9_hotfix1.md  V1_PARAMETER_REFERENCE.md  VISUALIZATION_USAGE.md  asr_quality_aware_pipeline.md  brouhaha_pipeline_design.md  faq.md  gui_readme.md  index.md  release_notes_v1.8.12.md  release_notes_v1.8.13.md  release_notes_v1.8.14.md  release_notes_v1.8.7b0.md  release_notes_v1.8.7b1.md  release_v1.8.12_merge_guide.md  release_v1.8.13_reply_drafts.md  release_v1.8.13_step6_guide.md  translation-glossary.md
examples/: config_example.json
external_review/: README.txt  install_linux.sh.txt  post_install_v1.8.2rc1.py.txt  registry.py.txt  standalone.py.txt
faq/: index.html
getting-started/: index.html
installer/: .gitignore  BUILD_AND_DISTRIBUTE.md  README.md  README_INSTALLER.txt  README_INSTALLER_v1.5.1.txt  README_INSTALLER_v1.5.3.txt  RELEASE_NOTES_v1.8.10.md  RELEASE_NOTES_v1.8.10.post3.md  RELEASE_NOTES_v1.8.11.md  RELEASE_NOTES_v1.8.7.md  RELEASE_NOTES_v1.8.8.md  RELEASE_NOTES_v1.8.8b1.md  RELEASE_NOTES_v1.8.9.md  RELEASE_NOTES_v1.8.9.post1.md  RELEASE_NOTES_v1.8.9.post2.md  VERSION  WhisperJAV_Launcher.py  WhisperJAV_Launcher_v1.5.1.py  WhisperJAV_Launcher_v1.5.3.py  build_all.ps1  build_exe_cli.ps1  build_exe_gui.ps1  build_installer.bat  build_installer_v1.5.1.bat  build_installer_v1.5.3.bat  build_log_v1.5.1.txt  build_log_v1.5.3.txt  build_log_v1.7.0-beta.txt  build_release.py  build_whisperjav_installer_ds.bat  build_whisperjav_installer_web.bat  build_whisperjav_wheel.bat  checksums.json  construct.yaml  construct.yaml.orig  construct_v1.5.1.yaml  construct_v1.5.3.yaml  create_desktop_shortcut.bat  create_desktop_shortcut_manual.bat  create_desktop_shortcut_v1.5.1.bat  (+32 more)
notebook/: EasyOCR_4_VSF.ipynb  EasyOCR_4a_VSF.ipynb  WhisperJAV_1_1.ipynb  WhisperJAV_1_2.ipynb  WhisperJAV_colab_edition.ipynb  WhisperJAV_colab_edition_beta.ipynb  WhisperJAV_colab_edition_expert.ipynb  WhisperJAV_colab_parallel.ipynb  WhisperJAV_colab_parallel_expert.ipynb  WhisperJAV_kaggle_parallel_edition.ipynb  WhisperJAV_v0_6a.ipynb  WhisperJAV_v0_6b.ipynb  WhisperJAV_v0_6c.ipynb  WhisperJAV_v0_6d.ipynb  WhisperJAV_v0_6e.ipynb  WhisperJAV_v0_6f.ipynb  WhisperJAV_v0_6g.ipynb  WhisperJAV_v0_6h.ipynb  WhisperJAV_v0_6i.ipynb  WhisperJAV_v0_7.ipynb  WhisperJAV_v0_7a.ipynb  WhisperJAV_v0_7a_temp.ipynb  WhisperJAV_v0_7b.ipynb  WhisperJAV_v1_0_beta.ipynb  WhisperWithVAD_mr.ipynb  WhisperWithVAD_pro.ipynb  WhisperWithVAD_pro_20240306.ipynb  build_llama_cpp_wheel.ipynb  cuda_test.ipynb  kaggle_dependency_check.ipynb
notebook /: WhisperJAV_v0_6h.ipynb
pipelines/: index.html
release_notes_v1.8.7b0/: index.html
release_notes_v1.8.7b1/: index.html
release_v1.8.12_merge_guide/: index.html
release_v1.8.13_reply_drafts/: index.html
release_v1.8.13_step6_guide/: index.html
results/: 25min-HODV-22019.ctc_filtered_transcripts.json  25min-HODV-22019.ctc_raw_transcripts.json  25min-HODV-22019.surgical_evaluation.txt  ctc_filtered_transcripts.json  ctc_raw_transcripts.json  detected_gaps.json  surgical_evaluation.txt
scripts/: FORENSIC_ANALYSIS_REPORT.md  INVESTIGATION_ROADMAP.md  README_SRT_COVERAGE.md  compare_scene_methods.py  forensic_analysis_output.txt  forensic_srt_analysis.py  generate_visual_summary.py  hallucination_analysis_output.txt  hallucination_pattern_analysis.py  omnilingual_asr_llm_chunk_to_srt_reference.py  srt_compare.py  test_srt_coverage.py  translate_docs.py  video_scenedetct_chunker_for_vbr_audio_v01.py  video_scenedetct_stitcher_v01.py  video_scenedetct_vbr-chunker-stitcher_v02.py  whisper_param_tuner.py
search/: search_index.json
site/: sitemap.xml
tests/: ADDING_NEW_HYPOTHESES.md  ANALYSIS_SUMMARY.txt  HYPOTHESIS_SUITE_SUMMARY.md  HYPOTHESIS_TESTING_README.md  INSTALLATION_ACCEPTANCE_TESTS.md  README_HYPOTHESIS_SUITE.md  Reference_code_nemo_model_downloads_warmup.py  SESSION_STATE_RESUME.md  __init__.py  conftest.py  (+111 more)
(+739 files in other folders)
